[tool.poetry]
name = "md-to-pdf-converter"
version = "0.1.0"
description = "A lightweight Markdown to PDF converter with customizable templates."
authors = ["Tomas Landberg <tomas.landberg@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/froghouse/md-to-pdf-converter"
repository = "https://github.com/froghouse/md-to-pdf-converter"
keywords = ["markdown", "pdf", "converter", "templates"]

[tool.poetry.dependencies]
python = "^3.9"
markdown = "^3.4"
jinja2 = "^3.1"
weasyprint = "^58.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
flake8 = "^6.1"
black = "^23.9"
isort = "^5.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
