[tool.poetry]
name = "md-to-pdf-converter"
version = "1.0.1"
description = "A lightweight Markdown to PDF converter with customizable templates."
authors = ["Tomas Landberg <tomas.landberg@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/froghouse/md-to-pdf-converter"
repository = "https://github.com/froghouse/md-to-pdf-converter"
keywords = ["markdown", "pdf", "converter", "templates"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
markdown = "^3.4"
jinja2 = "^3.1"
weasyprint = "^63.0"
pygments = "^2.18.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
flake8 = "^6.1"
black = "^23.9"
isort = "^5.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
